Closed Bug 420339 Opened 17 years ago Closed 16 years ago

Cursor isn't changed on panel or popup elements

Categories

(Core :: Widget: Cocoa, defect, P1)

x86
macOS
defect

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta4-fixed

People

(Reporter: kazuho, Assigned: mstange)

Details

(Keywords: regression)

Attachments

(3 files)

User-Agent: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3) Gecko/2008020511 Firefox/3.0b3 Build Identifier: Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b3) Gecko/2008020511 Firefox/3.0b3 CSS "cursor" attribute doesn't work when I set the attribute to a element on a panel element. Reproducible: Always Steps to Reproduce: 1. Crete a panel with child element 2. Set "cursor: pointer" to the child element. Actual Results: Mouse cursor doesn't change on the child element. Expected Results: Mouse cursor should be pointer when I hover the child element. This problem happens only on Firefox 3 beta on Mac OS X.
Attached file Sample XUL file
Could you test this XUL file? It works fine on Windows, but doesn't work on Mac. I have tested on Firefox 3 beta 5.
Attachment #314171 - Flags: review?
Attachment #314171 - Flags: review? → review?(enndeakin)
Component: XUL Widgets → OS Integration
Product: Toolkit → Firefox
Version: unspecified → 3.0 Branch
Flags: blocking-firefox3?
QA Contact: xul.widgets → os.integration
Keywords: qawanted
Won't block until it's confirmed. Enn: is this in the right component?
Flags: blocking-firefox3? → blocking-firefox3-
I remember seeing this before, yes.
Status: UNCONFIRMED → NEW
Component: OS Integration → Event Handling
Ever confirmed: true
Flags: blocking-firefox3-
Product: Firefox → Core
Version: 3.0 Branch → Trunk
QA Contact: os.integration → events
Attachment #314171 - Flags: review?(enndeakin)
Does someone work on this issue? You can check the issue with TwitterFox. https://addons.mozilla.org/en-US/firefox/addon/5081
Confirming this bug. This is a Mac-specific bug; Windows and Linux do NOT exhibit this bug. I am seeing this bug with my Firefox extension in Firefox 3.0.1 in a <popup>. No cursor changes are made. Firefox 2 did not have this problem. Modifying summary to include popup. Can someone suggest what part of the code to investigate for this bug?
Summary: Cursor doesn't change on panel element → Cursor doesn't change on panel or popup elements
cc'ing Josh since he may be able to suggest where to look for this bug.
Keywords: regression
Severity: normal → major
Component: Event Handling → XUL
Priority: -- → P1
Hardware: PowerPC → x86
Summary: Cursor doesn't change on panel or popup elements → Cursor isn't changed on panel or popup elements
Flags: wanted1.9.2?
QA Contact: events → xptoolkit.widgets
Component: XUL → Widget: Cocoa
QA Contact: xptoolkit.widgets → cocoa
I opened the testcase attached to this bug on the nightly build from yesterday [Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.3a1pre) Gecko/20090908 Minefield/3.7a1pre]. The bug remains. Can someone point me to the relevant code? Thanks!
nsEventStateManager::UpdateCursor seems like a good place to start.
Oh, maybe nsCocoaWindow just needs to implement SetCursor by forwarding it to its mPopupContentView. Do you want to take this bug, Kathleen?
Keywords: qawanted
Attached patch v1Splinter Review
Assignee: nobody → mstange
Status: NEW → ASSIGNED
Attachment #403018 - Flags: review?(joshmoz)
Attachment #403018 - Flags: review?(joshmoz) → review+
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
It seems cursor behavior is fixed, however, tooltip.openPopup(target, "after_pointer", 0, 0, false, false) function displays tooltip/menu popup wrong place or won't appear. I attached sample XUL code.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attachment #403310 - Flags: review?
That's a completely different bug. Please file a new bug report for that, complete with steps to reproduce and actual vs expected results.
Status: REOPENED → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Attachment #403310 - Flags: review?
Attachment #403018 - Flags: approval1.9.2?
Confirmed that the bug is fixed on Firefox 3.5.4, however, it still happens in Firefox 3.6b1.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
This hasn't landed on the 1.9.1 tree yet, so it can't be fixed in Firefox 3.6. You'll need to test a trunk build (i.e. 3.7a1pre or something).
Status: REOPENED → RESOLVED
Closed: 16 years ago16 years ago
Resolution: --- → FIXED
Comment on attachment 403018 [details] [diff] [review] v1 a192=beltzner
Attachment #403018 - Flags: approval1.9.2? → approval1.9.2+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: