Bug 420339 - SetCursor doesn't work on popup windows. r=josh